@@ -161,8 +161,16 @@ class Context(object):
         """Add all known glibc build configurations."""
         self.add_config(arch='aarch64',
                         os_name='linux-gnu')
+        self.add_config(arch='aarch64',
+                        os_name='linux-gnu',
+                        variant='ilp32',
+                        gcc_cfg=['--with-multilib-list=ilp32'])
         self.add_config(arch='aarch64_be',
                         os_name='linux-gnu')
+        self.add_config(arch='aarch64_be',
+                        os_name='linux-gnu',
+                        variant='ilp32',
+                        gcc_cfg=['--with-multilib-list=ilp32'])
         self.add_config(arch='alpha',
                         os_name='linux-gnu')
         self.add_config(arch='arm',
